2016-11-18  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/EmptyGameState.hpp: created becaused used in two
	test files.

	* src/client/MainMenu.cpp  (save/restore): empty override of pure
	virtual functions.
	* src/client/GameState.hpp (save/restore): add two pure virtual
	functions.

	* src/client/StateSaver.cpp (save): implement save/restore function
	for CEGUI::Window type.


2016-11-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/StateSaver_Test.cpp (urect_eq): two more tests on
	URect save/restore.
	* src/client/StateSaver.cpp (save): implement save/restore function
	for CEGUI::Urect type.

	* src/client/StateSaver_Test.cpp (udim_eq): two more tests on
	UDim save/restore.
	* src/client/StateSaver.cpp (save): add save/restore functions to
	easily handle CEGUI::UDim types.
	* src/client/StateSaver.hpp (subkey): helper function for easily
	create subkey names.

2016-11-16  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/Exception_Test.cpp (three_param): some exception
	constructor unit tests.
	* src/client/Exception.cpp (RainbrurpgException): create a base
	eception class.
	* src/client/StateSaver_Test.cpp (cast_error): implement one more
	unit tests.

	* src/client/SateSaver.hpp (StateSaver): setter and getter
	implementationwith std::exception throw.
	* src/client/StateSaver_Test.cpp: some basic unit tests.
	* src/client/SateSaver.cpp (exists): basic implementation.
	* src/client/SateSaver.hpp (StateSaver): new class created.

2016-11-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/Logger.hpp (tOptionMap): fix some undocumented members.

	* CMakeLists.txt: generate Doxyfile from Doxyfile.in
	* .gitignore: add doxygen generated files.
	* Doxyfile.in: template file for doxygen documentation gneration.

	* .travis-ci: remove rvm reference in allow_failures.

2016-11-08  Jérôme Pasquier  <rainbru@free.fr>

	* .travis-ci: add allow_failures for clang.
	* README.md: add travis-ci build image.

2016-11-07  Jérôme Pasquier  <rainbru@free.fr>
