@@ -122,6 +122,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-18 ven. 23:20]--[2016-11-18 ven. 23:46] =>  0:26
      CLOCK: [2016-11-18 ven. 04:03]--[2016-11-18 ven. 04:21] =>  0:18
      CLOCK: [2016-11-18 ven. 03:06]--[2016-11-18 ven. 03:39] =>  0:33
      CLOCK: [2016-11-18 ven. 02:35]--[2016-11-18 ven. 03:02] =>  0:27
@@ -160,15 +161,20 @@ Error is fixed, was due to a src/services/Services.hpp old code
 	GameState_Test.cpp and StateManager_Test.cpp
       - [X] Then we'll need two GameState pure virtual function
 	maybe save/load or save/restore passing a StateSaver* argument
-      - [ ] Then implement them in MainMenu
-	save the visible state of NyiDialogs, positions of windows etc...
+      - [X] Handle Alt+Enter in GameEngine
       - [ ] Next thing is to handle GameEngine::reconfigure()
+        - [ ] Handle the Ogre restart as for shutdown. A boolean flag
+	  member that shutdown and restart Ogre
+	  But that's the function that can handle restart after
+	  frameRenderingQueued returns false
 	- [ ] Save current gamestate and serialize it
         - [ ] Ogre startup process must stay in little members function
 	  so we exactly know the order of initialization
         - [ ] Shutdown Ogre
         - [ ] Change its fullscreen configuration (maybe save it to file)
         - [ ] Restart Ogre an subsystem (OIS, CEGUI etc...)
+      - [ ] Then implement them in MainMenu
+	save the visible state of NyiDialogs, positions of windows etc...
 - [ ] It could be fine if this changes could be serialized in the same
   way Ogre does it. This way, at next startup, the Ogre config dialog
   would be defaulted to in-game options.
